@@ -1,5 +1,6 @@
 v0.7 - 21st August 2010
 * new attribute Shipment#consols
+* new method Shipment#transport_mode
 * new attribute Order#invoice_number
 
 v0.6 - 31st August 2010
